# stardustfs-server

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  README.md  ROADMAP.md  main.py  pyproject.toml  requirements.txt
.kiro/specs/mvp2-central-server/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: british-english.md
.kiro/steering/01-python-dev/: dev-environment.md  logging.md  sqlite.md
app/: config.py  database.py  dependencies.py  exceptions.py  i18n.py  main.py  rendezvous.py  schemas.py  security.py
app/routers/: auth.py  devices.py  network.py  pages.py  relay.py  replication.py  routing.py  shares.py  sync.py
app/services/: auth_service.py  device_service.py  oauth_service.py  relay_hub.py  replication_service.py  share_service.py  sync_service.py  token_service.py  version_notifier.py
data/: DATABASE_SCHEMA.md
scripts/: cleanup_duplicate_devices.py
static/: style.css  tokens.css
static/tokens/: colors.css  effects.css  fonts.css  spacing.css  typography.css
templates/: dashboard.html  landing.html  login.html  register.html
tests/: conftest.py  test_auth.py  test_device_sources.py  test_devices.py  test_network.py  test_oauth.py  test_pages.py  test_relay.py  test_rendezvous.py  test_replication.py  test_routing.py  test_shares.py  test_shares_pbt.py  test_sync.py  test_sync_longpoll.py
